--- a/lawwa-web-revised/addon.html
+++ b/lawwa-web-revised/addon.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/henna.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Henna</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Henna</h4>
                         <p>
                           Have your big day memorable with Lawwa Henna services that let you choose from various delicate designs of flower patterns. Cooling the nerve-endings of your body with Lawwa Henna now.
                         </p>
@@ -160,7 +160,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/manicure.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Manicure</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Manicure</h4>
                         <p>
                          Where nail meets art. You desire, we made it. We know you love us so why wait?
                         </p>
@@ -169,7 +169,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/pedicure.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Pedicure</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Pedicure</h4>
                         <p>
                          Shine from head to toe. Exfoliate your skin and remove any callouses on the bottom of your feet when you do Lawwa Pedicure.
                         </p>
@@ -178,7 +178,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/eye-perming.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eyelash Perming</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Eyelash Perming</h4>
                         <p>
                          Give an attractive curl to your straight lashes and take it to a Luxurious Lengths. Say no more to lashes pressing against the backs of your glasses or spectacles.
                         </p>
@@ -187,7 +187,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/eye-treatment.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eye Care Treatment</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Eye Care Treatment</h4>
                         <p>
                           Radiant, hydrated and glowing. That’s the results you’ll get after pamper your eyes with Lawwa Eye Care. Be the new flower of your version today.
                         </p>
@@ -196,7 +196,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/face-guasha.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Face Gua Sha</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Face Gua Sha</h4>
                         <p>
                          Lawwa Face Gua Sha relieve all the tensions in the muscles of your face and helps you boost blood circulation.
                         </p>
@@ -205,24 +205,25 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/lips-treatment.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Lips Treatment</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Lips Treatment</h4>
                         <p>
                          Say goodbye to dry and chaped lips. Makes yourself alive every moment with moisture and healthier lips look. Elegance in every way with Lawwa Lips treatment
                         </p>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/herbbath.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Herb Bath</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Herb Bath</h4>
+                        <p>
+                         Using the power of herbs and the soothing of warm water, Lawwa Herb Bath is a simple and relaxing way to support your well-being while winding. Just what you need, at Lawwa.Asia
+                        </p>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/reflexology.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Reflexology</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Reflexology</h4>
                         <p>
                          Relax. Release. Rebalance. Love yourself as much as Lawwa loves you.
                         </p>
@@ -239,7 +240,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/waxing.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Waxing</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Waxing</h4>
                         <p>
                          Remove dead skin cells now with Lawwa Waxing to reveal a softer underlying layer of your skin from any parts of the body.
                         </p>
@@ -248,7 +249,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/whitening-bodyscrub.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Whitening Body Scrub</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Whitening Body Scrub</h4>
                         <p>
                          Smoothing and softening rough, dry skin of yours after a heavy workloads from your hectic everyday routine. Lawwa welcome the best in you.
                         </p>
@@ -319,7 +320,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12" >
-                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/#">
                           <h2>Join Today For Full Access To Our Services</h2>
                           <p>
                             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
