--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -152,7 +152,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6"> 
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Facial/deepcleansing.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Deep Cleansing Facial</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Deep Cleansing Facial</h4>
                         <p>
                          Adding care to your normal, dry & dehydrated skins that instantly moisturize skin to get the calming and soothing effect ! 
                         </p>
@@ -161,7 +161,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Facial/hydratingfacial.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Hydrating Facial</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Hydrating Facial</h4>
                         <p>
                          Rejuvenate your skin and feel the change of moisturizing & firming treatment for a brighter & radiant complexion.
                         </p>
@@ -170,7 +170,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Facial/detoxifyingfacial.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Natural Detoxifying Facial</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Natural Detoxifying Facial</h4>
                         <p>
                          Let your oily and congested skins look better by remove skin impurities to improve skin clarity & prevent acne breakout. 
                         </p>
@@ -179,7 +179,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                       <img src="img/lawwa-img/img-selection/Facial/signatureacne.JPG" alt="">
-                      <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Acne Clearing Treatment</h5>
+                      <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Acne Clearing Treatment</h4>
                       <p>
                        Goodbye to acne & pimple problems! This treatment will stimulate cell renewal, promote healing and lighten scars & marks.
                       </p>
@@ -188,7 +188,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/img-selection/Facial/signaturepigmentation.JPG" alt="">
-                    <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Pigmentation Treatment</h5>
+                    <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Pigmentation Treatment</h4>
                     <p>
                      Restore your skin natural glow & give instant brightening result after treatment that give smooth, supple and younger looking for pigmentation, rough skin and dull complexion problems. 
                     </p>
@@ -197,7 +197,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/img-selection/Facial/intensiveanti-wrinkle.JPG" alt="">
-                    <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Intensive Anti-wrinkle Skin Therapy</h5>
+                    <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Intensive Anti-wrinkle Skin Therapy</h4>
                     <p>
                      Times never come again, restore your skin natural glow and instant radiant result to improve wrinkle and sagging skins.
                     </p>
@@ -206,7 +206,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/img-selection/Facial/intensivephoton.JPG" alt="">
-                    <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Intensive Photon Technology Skin Therapy</h5>
+                    <h4 class="lawwa-blue-text" style="text-transform: none;">Lawwa Intensive Photon Technology Skin Therapy</h4>
                     <p>
                      Delete old style in your beauty therapy with our intensive Photon Technology service to have immediate brighter complexion and increase blood flow & collagen for dull and mature skin. 
                     </p>
@@ -276,7 +276,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12" >
-                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/plainbanner.jpeg" style="background-repeat: no-repeat; background-size: cover;">
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/#" style="background-repeat: no-repeat; background-size: cover;">
                           <h2>Join Today For Full Access To Our Services</h2>
                           <p>
                             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
