--- a/lawwa-web-revised/makeup.html
+++ b/lawwa-web-revised/makeup.html
@@ -154,7 +154,7 @@
                       <div class="block">
                         <img src="img/lawwa-img/img-selection/Make-Up/event.JPG" alt="" style="object-fit: cover; object-position: center center;">
                       </div>
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Event</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Event</h4>
                         <p>
                          Be bold and be you! We have different make up look for different occasion that can match your needs. 
                         </p>
@@ -163,7 +163,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Make-Up/wedding.JPG" alt="" style="object-fit: cover; object-position:50% 30%;">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Wedding</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Wedding</h4>
                         <p>
                          We offer timeless bridal makeup, with our timeless products for you to look appealing on your BIG day!
                         </p>
@@ -171,8 +171,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Shooting</h5>
+                        <img src="img/lawwa-img/img-selection/Make-Up/shooting.jpg" alt="">
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Shooting</h4>
                         <p>
                          If you are too busy to get ready for the day, we will assist with the look that you simply want to make sure you are well presented for your important day.
                         </p>
@@ -180,8 +180,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
-                      <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                      <h5 class="lawwa-blue-text" style="text-transform: none;">Team</h5>
+                      <img src="img/lawwa-img/img-selection/Make-Up/team.JPG" alt="">
+                      <h4 class="lawwa-blue-text" style="text-transform: none;">Team</h4>
                       <p>
                        Get glam & be glamorous with a group of your friends. Enjoy the moment and savour the day. 
                       </p>
@@ -251,7 +251,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12" >
-                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/#">
                           <h2>Join Today For Full Access To Our Services</h2>
                           <p>
                             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
