--- a/lawwa-web-revised/massage.html
+++ b/lawwa-web-revised/massage.html
@@ -148,7 +148,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Massage/classic-massage.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Classic Massage</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Classic Massage</h4>
                         <p>
                           A stress-relieving experience to stimulate your blood circulation & relieve tight muscles.
                           <br> <br>
@@ -158,7 +158,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Massage/guasha-body.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Gua Sha Body Drainage Massage</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Gua Sha Body Drainage Massage</h4>
                         <p>
                           How often do you end the day feeling worn out and stressed? We offer this massage to help you soothing the stress and releasing the tension.
                           </p>
@@ -167,7 +167,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Massage/aromatherapy.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Aromatherapy Massage</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Aromatherapy Massage</h4>
                         <p>
                           A nature breeze of relaxation comes from our Lawwa Aromatherapy Oil for full body massage that promote beneficial changes in your mind and body. 
                           </p>
@@ -237,7 +237,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12" >
-                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/#">
                           <h2>Join Today For Full Access To Our Services</h2>
                           <p>
                             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
