--- a/lawwa-web-revised/treatment.html
+++ b/lawwa-web-revised/treatment.html
@@ -125,7 +125,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Treatment/treatment-banner.JPG">
           </div>
         </div>
       </section>
@@ -150,7 +150,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Treatment/tummypoint.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Tummy Massage</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Tummy Massage</h4>
                         <p>
                          Get an instant flat belly by getting our special belly massage that surely will detox & make you impress with your new belly circumference.
                         </p>
@@ -159,7 +159,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Treatment/bust-enhancement.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Bust Enhancement Treatment</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Bust Enhancement Treatment</h4>
                         <p>
                          Boost your confidence with firmer and ideal breast shape!
                         </p>
@@ -168,7 +168,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Treatment/hip-uplifting.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Hip Uplifting Treatment</h5>
+                        <h4 class="lawwa-blue-text" style="text-transform: none;">Hip Uplifting Treatment</h4>
                         <p>
                          Comfort is the first step in relaxation, this treatment will help you relieves back pain & improve your hip appearance.
                         </p>
@@ -238,7 +238,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12" >
-                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/#">
                           <h2>Join Today For Full Access To Our Services</h2>
                           <p>
                             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
