--- a/lawwa-web-revised/addon.html
+++ b/lawwa-web-revised/addon.html
@@ -229,14 +229,15 @@
                         </p>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/tangas-basah.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">'Tangas Basah'</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <p>
+                         Enjoy various benefits of Lawwa Wet Tangas from cleansing and removing your menstrual blood residue up to strengthens your vaginal muscles. A natural way of improving your health. Your lawwa is our matters.
+                        </p>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/waxing.JPG" alt="">
