--- a/lawwa-web-revised/confinement.html
+++ b/lawwa-web-revised/confinement.html
@@ -245,7 +245,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12" >
-                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/#">
                           <h2>Join Today For Full Access To Our Services</h2>
                           <p>
                             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
