--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -171,7 +171,7 @@
                 <div class="col-lg-9">
                     <div class="blog-item">
                         <div class="bi-pic col-10 col-sm-6 col-md-6">
-                            <img src="img/lawwa-img/img-selection/Facial -Services.jpg" alt="">
+                            <img src="img/lawwa-img/services/facial.JPG" alt="">
                         </div>
                         <div class="bi-text">
                             <h5>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="blog-item">
                       <div class="bi-pic col-10 col-sm-6 col-md-6">
-                        <img src="img/lawwa-img/img-selection/Makeup - Services.jpg" alt="">
+                        <img src="img/lawwa-img/services/makeup.JPG" alt="">
                       </div>
                       <div class="bi-text">
                           <h5>
@@ -197,7 +197,7 @@
                   </div>
                   <div class="blog-item">
                     <div class="bi-pic col-10 col-sm-6 col-md-6">
-                      <img src="img/lawwa-img/img-selection/Massage - Services.JPG" alt="">
+                      <img src="img/lawwa-img/services/massage.JPG" alt="">
                     </div>
                     <div class="bi-text">
                         <h5>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="blog-item">
                   <div class="bi-pic col-10 col-sm-6 col-md-6">
-                    <img src="img/lawwa-img/img-selection/Confinement - Services.JPG" alt="">
+                    <img src="img/lawwa-img/services/confinement.JPG" alt="">
                   </div>
                   <div class="bi-text">
                       <h5>
@@ -223,7 +223,7 @@
               </div>
               <div class="blog-item">
                 <div class="bi-pic col-10 col-sm-6 col-md-6">
-                  <img src="img/lawwa-img/img-selection/Treatment - Services.jpg" alt="" >
+                  <img src="img/lawwa-img/services/treatment.JPG" alt="" >
                 </div>
                 <div class="bi-text">
                     <h5 style="color: rgba(42,56,143,1) !important;">
@@ -236,7 +236,7 @@
             </div>
             <div class="blog-item">
               <div class="bi-pic col-10 col-sm-6 col-md-6">
-                <img src="img/lawwa-img/img-selection/Add-On - Services.JPG" alt="">
+                <img src="img/lawwa-img/services/add on.JPG" alt="">
               </div>
               <div class="bi-text">
                   <h5>
