--- a/lawwa-web-revised/makeup.html
+++ b/lawwa-web-revised/makeup.html
@@ -125,7 +125,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Make-Up/make-up banner.JPG">
+            <img class="cust-banner-pic" src="img/lawwa-img/Make-Up/make-upbanner.JPG">
           </div>
         </div>
       </section>
@@ -152,7 +152,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                       <div class="block">
-                        <img src="img/lawwa-img/img-selection/Make-Up/event.JPG" alt="" style="object-fit: cover; object-position: center center;">
+                        <img src="img/lawwa-img/Make-Up/event.JPG" alt="" style="object-fit: cover; object-position: center center;">
                       </div>
                         <h4 class="lawwa-blue-text" style="text-transform: none;">Event</h4>
                         <p>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/img-selection/Make-Up/wedding.JPG" alt="" style="object-fit: cover; object-position:50% 30%;">
+                        <img src="img/lawwa-img/Make-Up/wedding.JPG" alt="" style="object-fit: cover; object-position:50% 30%;">
                         <h4 class="lawwa-blue-text" style="text-transform: none;">Wedding</h4>
                         <p>
                          We offer timeless bridal makeup, with our timeless products for you to look appealing on your BIG day!
@@ -171,7 +171,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/img-selection/Make-Up/shooting.jpg" alt="">
+                        <img src="img/lawwa-img/Make-Up/shooting.jpg" alt="">
                         <h4 class="lawwa-blue-text" style="text-transform: none;">Shooting</h4>
                         <p>
                          If you are too busy to get ready for the day, we will assist with the look that you simply want to make sure you are well presented for your important day.
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
-                      <img src="img/lawwa-img/img-selection/Make-Up/team.JPG" alt="">
+                      <img src="img/lawwa-img/Make-Up/team.JPG" alt="">
                       <h4 class="lawwa-blue-text" style="text-transform: none;">Team</h4>
                       <p>
                        Get glam & be glamorous with a group of your friends. Enjoy the moment and savour the day. 
