--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -123,7 +123,7 @@
 
     <br>
 
-    <section>
+  <section>
     <div class="service-hero-wrap2">
       <div class="container">
         <div class="row no-gutters align-items-center"  data-scrollax-parent="true">
@@ -186,23 +186,25 @@
 
   <br>
 
-  <section>
+<section>
   <div class="container">
-  <div class="row no-gutters align-items-center"  data-scrollax-parent="true">
-    <div class="col-12 col-xl-8 col-lg-8 col-md-3 col-sm-3">
-      <div class="custom-ph-text">
-        <h2 style="color: #FFF;">Join Today And Enjoy All Of Our Services</h2>
-        <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank" class="cust-lawwa-gradient">
-          JOIN NOW
-        </a>
+    <div class="row no-gutters align-items-center"  data-scrollax-parent="true">
+      <div class="col-12 col-xl-8 col-lg-4 col-md-6 col-sm-6">
+        <div class="contact-text2">
+          <div class="custom-ph-text">
+            <h2 style="color: #FFF;">Join Today And Enjoy All Of Our Services</h2>
+            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank" class="cust-lawwa-gradient">
+            JOIN NOW
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  </div>
-  <section>
+<section>
 
  <!-- Footer Section Begin -->
- <footer class="footer-section">
+<footer class="footer-section">
   <br><br><br>
   <div class="container">
     <div class="row">
